--- a/app/src/main/res/layout/recycler_my_post_row_item.xml
+++ b/app/src/main/res/layout/recycler_my_post_row_item.xml
@@ -2,8 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:background="@color/white">
+
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/myPostCardViewId"
@@ -15,24 +18,46 @@
         app:cardElevation="3dp"
         app:cardUseCompatPadding="true">
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:weightSum="6">
 
-            <TextView
-                android:id="@+id/tvPostStatusId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
+            <LinearLayout
+                android:weightSum="2"
                 android:background="#E3EFDE"
-                android:gravity="center"
-                android:padding="5dp"
-                android:text="Post Status "
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_weight="1"
+                    android:id="@+id/tvPostStatusId"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:text="Post Status "
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/deleteImageBtnId"
+                    android:layout_gravity="center"
+                    android:background="#E3EFDE"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_baseline_delete_24"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
+
+
+            </LinearLayout>
+
 
             <ImageView
                 android:id="@+id/myPostIvImageId"
